# qt-transfer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docker/: entrypoint.sh
src/: main.cpp  main.qml
src/protocol/: IProtocol.cpp  IProtocol.h  ProtocolFactory.h  TcpProtocol.cpp  TcpProtocol.h  UdpProtocol.cpp  UdpProtocol.h
src/service/: TransferService.cpp  TransferService.h
src/viewmodel/: TransferViewModel.cpp  TransferViewModel.h
